--- a/src/app/views/order/info/order-info.component.scss
+++ b/src/app/views/order/info/order-info.component.scss
@@ -82,3 +82,41 @@ mat-spinner[matSuffix] {
     }
   }
 }
+
+.flex-container {
+  display: flex;
+  @media (max-width: 600px) {
+    display: block;
+    border-bottom: 1px solid rgba(black, 0.25);
+    margin-bottom: 8px;
+    padding-bottom: 8px;
+  }
+
+  & > * {
+    flex: 1;
+  }
+
+  & > div {
+    padding-right: 8px;
+    & > * {
+      width: 100%;
+    }
+  }
+
+  .button {
+    max-width: 40px;
+    margin-top: 10px;
+    @media (max-width: 600px) {
+      margin-top: initial;
+      display: block;
+    }
+  }
+}
+
+smart-list-item:last-child .flex-container {
+  @media (max-width: 600px) {
+    border-bottom: initial;
+    margin-bottom: initial;
+    padding-bottom: initial;
+  }
+}
