--- a/src/app/views/client/info/client-info.component.scss
+++ b/src/app/views/client/info/client-info.component.scss
@@ -80,7 +80,7 @@ mat-form-field:hover .show-on-hover:not(.nothing) {
   display: block;
 }
 
-mat-panel-title i {
+mat-panel-title i.warn {
   margin-left: 16px;
   color: #f44336;
 }
