--- a/src/app/views/order/info/order-info.component.html
+++ b/src/app/views/order/info/order-info.component.html
@@ -126,7 +126,7 @@
             </div>
             <div class="button">
               <button mat-icon-button type="button" matSuffix
-                      (click)="info.products.push(newProduct); newProduct = {}; productSelected = undefined;"
+                      (click)="addNewProduct()"
                       matTooltip="Adicionar produto" matTooltipPosition="above">
                 <mat-icon>add</mat-icon>
               </button>
@@ -151,7 +151,7 @@
                 {{(transaction.val) | currency : 'R$'}}
               </p>
               <button mat-icon-button type="button" matSuffix
-                      (click)="transactionSelected = newProduct = info.transactions.splice(i, 1)[0]"
+                      (click)="newProduct = info.transactions.splice(i, 1)[0]"
                       matTooltip="Editar transação" matTooltipPosition="above">
                 <mat-icon>edit</mat-icon>
               </button>
@@ -169,7 +169,7 @@
               </p>
             </mat-list-item>
           </mat-list>
-          <div class="flex-container" [class.break-line]="appComponent.navOpened">
+          <div class="flex-container" [class.break-line]="appComponent.snav.opened">
             <div>
               <mat-form-field appearance="fill">
                 <mat-label>Tipo</mat-label>
@@ -191,7 +191,7 @@
             </div>
             <div class="button">
               <button mat-icon-button type="button" matSuffix
-                      (click)="info.transactions.push(newTransaction); newTransaction = {}; transactionSelected = undefined;"
+                      (click)="addNewTransaction()"
                       matTooltip="Adicionar transação" matTooltipPosition="above">
                 <mat-icon>add</mat-icon>
               </button>
