--- a/src/app/views/order/info/order-info.component.scss
+++ b/src/app/views/order/info/order-info.component.scss
@@ -92,10 +92,12 @@ mat-spinner[matSuffix] {
     padding-bottom: 8px;
   }
   &.break-line {
-    display: block;
-    border-bottom: 1px solid rgba(black, 0.25);
-    margin-bottom: 8px;
-    padding-bottom: 8px;
+    @media (max-width: 600 + 256px) {
+      display: block;
+      border-bottom: 1px solid rgba(black, 0.25);
+      margin-bottom: 8px;
+      padding-bottom: 8px;
+    }
   }
 
   & > * {
