Developing the dashboard

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,15 @@
-<p style="height: 1000px">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem fuga itaque obcaecati
+<!--<p style="height: 1000px">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem fuga itaque obcaecati
   possimus sed sequi ut,
   voluptatibus! Architecto culpa cumque eligendi et, iusto nam nemo officiis tempore tenetur, voluptate
-  voluptates?</p>
+  voluptates?</p>-->
+
+<div class="container">
+  <mat-card>
+    <mat-card-title>Clientes</mat-card-title>
+    <mat-card-content>100</mat-card-content>
+  </mat-card>
+  <mat-card>
+    <mat-card-title>Cliente</mat-card-title>
+    <mat-card-content>100</mat-card-content>
+  </mat-card>
+</div>
