--- a/src/app/views/order/list/order-list.component.html
+++ b/src/app/views/order/list/order-list.component.html
@@ -20,10 +20,10 @@
       <td mat-footer-cell *matFooterCellDef>Total</td>
     </ng-container>
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
       <td mat-cell class="description-cell"
-          *matCellDef="let item">{{item.name}}
+          *matCellDef="let item">{{item.description}}
       </td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
