--- a/src/app/views/product/info/product-info.component.html
+++ b/src/app/views/product/info/product-info.component.html
@@ -31,6 +31,7 @@
             <!--suppress HtmlFormInputWithoutLabel -->
             <input matInput #nameField="ngModel" name="name" [(ngModel)]="info.name" type="text" required
                    maxlength="100" [disabled]="loading">
+            <mat-hint align="end" *ngIf="info.name?.length >= 100">{{info.name?.length || 0}}/100</mat-hint>
             <mat-error *ngIf="nameField.hasError('required')">
               Preencha com o nome
             </mat-error>
