--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,7 +74,7 @@
             </mat-icon>
             <p matLine>Produtos</p>
           </a>
-        </ng-container>
+        </div>
         <!--<div *ngIf="!loading && readyToGo && user">
           <a mat-list-item routerLink="/stock" routerLinkActive="active"
              (click)="mobileQuery.matches && snav.close()">
