--- a/src/app/views/order/info/order-info.component.html
+++ b/src/app/views/order/info/order-info.component.html
@@ -125,6 +125,9 @@
                        type="tel" [disabled]="loading">
               </mat-form-field>
             </div>
+            <div class="checkbox">
+              <mat-checkbox #entryField="ngModel" name="newEntry" [(ngModel)]="newProduct.entry">Entrada</mat-checkbox>
+            </div>
             <div class="button">
               <button mat-icon-button type="button" matSuffix
                       (click)="addNewProduct()"
