--- a/src/app/views/client/info/client-info.component.scss
+++ b/src/app/views/client/info/client-info.component.scss
@@ -71,9 +71,10 @@ mat-card.mat-elevation-z0 {
   background-color: transparent;
 }
 
-
-mat-form-field .show-on-hover:not(.nothing) {
-  display: none;
+@media (min-width: 601px) {
+  mat-form-field .show-on-hover:not(.nothing) {
+    display: none;
+  }
 }
 
 mat-form-field:hover .show-on-hover:not(.nothing) {
