--- a/src/app/views/order/list/order-list.component.html
+++ b/src/app/views/order/list/order-list.component.html
@@ -37,7 +37,7 @@
     </ng-container>
 
     <ng-container matColumnDef="totalCost">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Preço</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor</th>
       <td mat-cell *matCellDef="let item">{{item.totalCost | currency : 'R$'}}</td>
       <td mat-footer-cell *matFooterCellDef>{{totalCostAll | currency : 'R$'}}</td>
     </ng-container>
