--- a/src/app/views/order/info/order-info.component.html
+++ b/src/app/views/order/info/order-info.component.html
@@ -69,7 +69,7 @@
             <mat-panel-title>
               Produtos
               <i class="hint" *ngIf="!expansionTwo.expanded && info.products.length">
-                {{calcProductTotal() | currency : 'R$'}}
+                {{calcProductTotal('cost') | currency : 'R$'}}
               </i>
             </mat-panel-title>
           </mat-expansion-panel-header>
@@ -78,9 +78,10 @@
               <p matLine>
                 <span> {{product.name}} </span>
                 <span> x{{product.quantity}} </span>
+                <span *ngIf="product.entry"> (Entrada) </span>
               </p>
               <p matLine>
-                {{(product.quantity * product.price) | currency : 'R$'}}
+                {{(product.quantity * product.price) | currency : 'R$'}} ({{(product.quantity * product.weight * (product.entry ? 1 : -1)) | number}}kg)
               </p>
               <button mat-icon-button type="button" matSuffix
                       (click)="productSelected = newProduct = info.products.splice(i, 1)[0]"
@@ -97,7 +98,7 @@
                 <span style="font-weight: 500">Total</span>
               </p>
               <p matLine>
-                {{calcProductTotal() | currency : 'R$'}}
+                {{calcProductTotal('cost') | currency : 'R$'}} ({{calcProductTotal('weight') | number}}kg)
               </p>
             </mat-list-item>
           </mat-list>
@@ -149,10 +150,10 @@
           <mat-list>
             <mat-list-item *ngFor="let transaction of info.transactions; let i = index">
               <p matLine>
-                <span> {{transaction.type}} </span>
+                <span> {{transaction.type.name}} </span>
               </p>
               <p matLine>
-                {{(transaction.val) | currency : 'R$'}}
+                {{(transaction.amount) | currency : 'R$'}}
               </p>
               <button mat-icon-button type="button" matSuffix
                       (click)="newProduct = info.transactions.splice(i, 1)[0]"
@@ -173,12 +174,12 @@
               </p>
             </mat-list-item>
           </mat-list>
-          <div class="flex-container" [class.break-line]="appComponent.snav.opened">
+          <div class="flex-container flex25" [class.break-line]="appComponent.snav.opened">
             <div>
               <mat-form-field appearance="fill">
                 <mat-label>Tipo</mat-label>
                 <mat-select name="newType" [(ngModel)]="newTransaction.type" [disabled]="loading">
-                  <mat-option *ngFor="let type of transactionTypes" [value]="type.id">
+                  <mat-option *ngFor="let type of transactionTypes" [value]="type">
                     {{type.name}}
                   </mat-option>
                 </mat-select>
@@ -186,9 +187,18 @@
             </div>
             <div>
               <mat-form-field appearance="fill">
+                <mat-label>Data</mat-label>
+                <input matInput #dateField="ngModel" name="newDate" [(ngModel)]="newTransaction.date"
+                       [matDatepicker]="picker">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field appearance="fill">
                 <mat-label>Valor</mat-label>
-                <input matInput #phoneNumberField="ngModel" name="newValue"
-                       [(ngModel)]="newTransaction.val"
+                <input matInput #valueField="ngModel" name="newValue"
+                       [(ngModel)]="newTransaction.amount"
                        type="text" currencyMask [options]="{ prefix: 'R$ ', suffix: '', thousands: '.', decimal: ',' }"
                        [disabled]="loading">
               </mat-form-field>
@@ -223,6 +233,7 @@
     <pre>clientSelected {{clientSelected | json}}</pre>
     <pre>newProduct {{newProduct | json}}</pre>
     <pre>productSelected {{productSelected | json}}</pre>
+    <pre>newTransaction {{newTransaction | json}}</pre>
   </form>
 </div>
 
