--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -20,6 +20,13 @@
     display: block;
     margin: 8px 0;
 
+    &:first-child {
+      margin-top: 0;
+    }
+    &:last-child {
+      margin-bottom: 0;
+    }
+
     @media (max-width: 600px) {
       border-radius: 0;
     }
